welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: value ! is not a member of Int
  else if ((a==b && a!=c) || (a==c && a!b) || (b==c && b!=a)) {
                                       ^